--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div class="profile">
         <h1>Bienvenido a BOTS COMUNITY</h1>
-        <p>Unete a nuestro discord debajo presionadole al boton.</p>
+        <p>Unete a nuestro discord debajo presionadole al libro.</p>
 
         <div class="social-links">
             <a href="https://discord.gg/UNNHJUV3U4" target="_blank">📘</a>
